[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git", branch = "master" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = "1.9.0"
